--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -37,7 +37,11 @@
   <script type='text/javascript' src="js/libs/eventemitter2.js"></script>
   <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
   <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
-  <script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
+  <!--<script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>-->
+
+  <!--<script type='text/javascript' src='http://knockoutjs.com/downloads/knockout-2.1.0.debug.js'></script>-->
+  <script type='text/javascript' src='http://knockoutjs.com/downloads/knockout-3.2.0.debug.js'></script>
+
   <script type='text/javascript' src='js/libs/gamepad.js'></script>
   <script type='text/javascript' src='js/utilities.js'></script>
   <script type='text/javascript' src='js/ui-loader.js'></script>
