Move lasers out into own plugin Move laser handling to node process. Add message manager to translate between socket and event loop

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -47,6 +47,7 @@
   <script type='text/javascript' src='js/libs/gamepad.js'></script>
   <script type='text/javascript' src='js/utilities.js'></script>
   <script type='text/javascript' src='js/ui-loader.js'></script>
+  <script type='text/javascript' src='js/message-manager.js'></script>
   <script type='text/javascript' src="js/cockpit.js"></script>
   <script type='text/javascript' src='js/libs/db.js'></script>
   <script type='text/javascript' src="js/libs/IndexedDBShim.min.js"></script>
