--- a/src/static/themes/OpenROV/css/style.css
+++ b/src/static/themes/OpenROV/css/style.css
@@ -66,7 +66,7 @@ a .navbar-titel {
 }
 #telemetry {
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
 .container-fluid {
       padding-right: 0px;
