--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,10 +5,8 @@
 
     <!-- The following viewport code is intended to fullscreen the cockpit and prevent scrolling -->
     <meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <!--<script type='text/javascript' src="js/libs/jquery.min.js"></script>-->
-    <script type='text/javascript' src="js/libs/jquery-1.11.2.js"></script>
-    <!--<script type='text/javascript' src="js/libs/jquery-ui.min.js"></script>-->
-    <script type='text/javascript' src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+    <script type='text/javascript' src="bower_components/jquery/dist/jquery.js"></script>
+    <script type='text/javascript' src="bower_components/jquery-ui//jquery-ui.min.js"></script>
 
     <script type="text/javascript">
     // this code again helps prevent scrolling and sets viewport for mobile
@@ -39,10 +37,8 @@
   <script type='text/javascript' src="js/libs/eventemitter2.js"></script>
   <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
   <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
-  <!--<script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>-->
 
-  <!--<script type='text/javascript' src='http://knockoutjs.com/downloads/knockout-2.1.0.debug.js'></script>-->
-  <script type='text/javascript' src='http://knockoutjs.com/downloads/knockout-3.2.0.debug.js'></script>
+  <script type='text/javascript' src='bower_components/knockoutjs/dist/knockout.js'></script>
 
   <script type='text/javascript' src='js/libs/gamepad.js'></script>
   <script type='text/javascript' src='js/utilities.js'></script>
