--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
 
     <!-- The following viewport code is intended to fullscreen the cockpit and prevent scrolling -->
     <meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <script type='text/javascript' src="bower_components/jquery/dist/jquery.js"></script>
+    <script type='text/javascript' src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type='text/javascript' src="bower_components/jquery-ui//jquery-ui.min.js"></script>
 
     <script type="text/javascript">
@@ -39,7 +39,8 @@
   <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
 
   <script type='text/javascript' src='bower_components/knockoutjs/dist/knockout.js'></script>
-
+  <script type='text/javascript' src="bower_components/knockout.validation/Dist/knockout.validation.js"></script>
+git
   <script type='text/javascript' src='js/libs/gamepad.js'></script>
   <script type='text/javascript' src='js/utilities.js'></script>
   <script type='text/javascript' src='js/ui-loader.js'></script>
@@ -50,7 +51,6 @@
   <script type='text/javascript' src="/config.js"></script>
   <script type='text/javascript' src="/socket.io/socket.io.js"></script>
 
-  <script type='text/javascript' src="bower_components/knockout.validation/Dist/knockout.validation.js"></script>
   <script type='text/javascript' src='js/knockout-extentions.js'></script>
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html">
