--- a/src/ui-plugins/new-ui/public/css/style.css
+++ b/src/ui-plugins/new-ui/public/css/style.css
@@ -1,3 +1,6 @@
+#mainContent {
+    width: 100%;
+}
 #newuiContainer {
     width: 100%;
     color: white;
@@ -26,15 +29,16 @@ a .navbar-titel {
 }
 
 #newuiVideo {
-    width:auto;
+    width:85%;
     overflow:hidden
 }
 
 #newuiControlpad {
     position: absolute;
-    top: 35px;
+    top: 0;
     right: 0;
-    width: 200px;
+    width: 10%;
+    min-width: 80px;
     height: auto;
     float: right;
 }
@@ -50,12 +54,17 @@ a .navbar-titel {
 
 .newui-item h4 {
     text-align: center;
+    font-size: 1.2vw;
     color: white;
-    top: -20px;
+    top: -2.9vh;
+
     background-color: black;
     padding: 5px 10px;
     display: inline-block;
-    left: 20%
+    left: 1vw;
+    /*width: 33%;*/
+    margin-right: auto;
+    margin-left: auto;
 }
 
 #heading-item { margin-top: 5px;}
