--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -48,8 +48,8 @@
   <script type='text/javascript' src="js/cockpit.js"></script>
   <script type='text/javascript' src='js/libs/db.js'></script>
   <script type='text/javascript' src="js/libs/IndexedDBShim.min.js"></script>
-  <script type='text/javascript' src="/config.js"></script>
-  <script type='text/javascript' src="/socket.io/socket.io.js"></script>
+  <script type='text/javascript' src="config.js"></script>
+  <script type='text/javascript' src="socket.io/socket.io.js"></script>
 
   <script type='text/javascript' src='js/knockout-extentions.js'></script>
   <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
