fix the new-ui telemetry

--- a/src/ui-plugins/new-ui/public/popup.ejs
+++ b/src/ui-plugins/new-ui/public/popup.ejs
@@ -28,13 +28,15 @@
 
 <body>
 
-<<%= uiElement %>></<%= uiElement %>>
+<<%= uiElement %> id="<%= uiId %>"></<%= uiElement %>>
 
   <script>
     var socket = window.io.connect();
     window.cockpit = {
       rov: new window.MessageManager(socket, this)
     }
+
+    <%- scriptBlock %>
   </script>
 
 </body>
