Moved key plugins to auto discovery

--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -58,9 +58,9 @@
       <div id="main-row">
         <div id="system-panel">
 
-          <!--servo-tilt1 servo-angle={{plugin_cameraTilt_angle}}></servo-tilt1-->
-          <brightness-indicator brightness-percent={{plugin_lights_level}}></brightness-indicator>
-          <orov-lasers event-emitter={{cockpit-event-emitter}}></orov-lasers>
+          <!--servo-tilt servo-angle={{plugin_cameraTilt_angle}}></servo-tilt-->
+          <!--brightness-indicator brightness-percent={{plugin_lights_level}}></brightness-indicator-->
+          <!--orov-lasers event-emitter={{cockpit-event-emitter}}></orov-lasers-->
         </div>
         <div id="nav-display"></div>
         <div id="primary-flight-display"></div>
@@ -115,7 +115,9 @@
  <script type="text/javascript" src="plugin/settings-manager/js/settings-manager.js"></script>
  <script type="text/javascript" src="plugin/thrusters2x1/js/thrusters2x1.js"></script>
  <script type="text/javascript" src="plugin/camera-tilt/js/camera-tilt-widgets-autodiscovery.js"></script>
+ <script type="text/javascript" src="plugin/camera-tilt/js/camera-tilt.js"></script>
 
+ <script type="text/javascript" src="js/widget-layout-manager.js"></script>
 
 
 </body>
