Moved Gamepad lib to new namespace

--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -30,6 +30,7 @@
   <body class='theme_r2'>
   <script type="text/javascript" src="js/utilities.js"></script>
   <script type="text/javascript" src="js/orov-behavior.js"></script> <!--for orov webcontrols -->
+  <script type="text/javascript" src="js/libs/gamepad.js"></script> <!--for gamepad-abstraction -->
 
 
 <!-- The template serves as the model for databinding, javascript is
