cvs with blackbox export working

--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -32,6 +32,8 @@
   <script type="text/javascript" src="js/orov-behavior.js"></script> <!--for orov webcontrols -->
   <script type="text/javascript" src="js/libs/gamepad.js"></script> <!--for gamepad-abstraction -->
   <script type="text/javascript" src="js/libs/mousetrap.min.js"></script> <!--for gamepad-abstraction -->
+  <script type="text/javascript" src="components/blackbox/dexie/dist/latest/Dexie.min.js"></script>
+  <script type="text/javascript" src="components/blackbox/comma-separated-values/csv.min.js"></script>
 
 
 <!-- The template serves as the model for databinding, javascript is
