Corrected bower component relative paths

--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -18,6 +18,10 @@
     <!-- hard coding while developing -->
     <link rel="stylesheet" href="plugin/theme_r2/css/theme_r2.css">
     <script type="text/javascript" src="components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script>
+      window.Polymer = window.Polymer || {};
+      window.Polymer.dom = 'shadow';
+    </script>
     <link rel="import" href="components/polymer/polymer.html">
 
   <% for(var i=0; i<sysscripts.length; i++) {%>
@@ -32,8 +36,8 @@
   <script type="text/javascript" src="js/orov-behavior.js"></script> <!--for orov webcontrols -->
   <script type="text/javascript" src="js/libs/gamepad.js"></script> <!--for gamepad-abstraction -->
   <script type="text/javascript" src="js/libs/mousetrap.min.js"></script> <!--for gamepad-abstraction -->
-  <script type="text/javascript" src="components/blackbox/dexie/dist/latest/Dexie.min.js"></script>
-  <script type="text/javascript" src="components/blackbox/comma-separated-values/csv.min.js"></script>
+  <script type="text/javascript" src="components/dexie/dist/latest/Dexie.min.js"></script>
+  <script type="text/javascript" src="components/comma-separated-values/csv.min.js"></script>
 
 
 <!-- The template serves as the model for databinding, javascript is
