--- a/src/ui-plugins/new-ui/public/popup.ejs
+++ b/src/ui-plugins/new-ui/public/popup.ejs
@@ -5,13 +5,13 @@
 
   <!-- The following viewport code is intended to fullscreen the cockpit and prevent scrolling -->
   <meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  <script type='text/javascript' src="/bower_components/jquery/dist/jquery.min.js"></script>
-  <script type='text/javascript' src="/bower_components/jquery-ui//jquery-ui.min.js"></script>
-  <script type='text/javascript' src="/js/libs/eventemitter2.js"></script>
-  <script type='text/javascript' src="/socket.io/socket.io.js"></script>
-  <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
+  <script type='text/javascript' src="../../bower_components/jquery/dist/jquery.min.js"></script>
+  <script type='text/javascript' src="../../bower_components/jquery-ui/jquery-ui.min.js"></script>
+  <script type='text/javascript' src="../../js/libs/eventemitter2.js"></script>
+  <script type='text/javascript' src="../../socket.io/socket.io.js"></script>
+  <script src="../../bower_components/webcomponentsjs/webcomponents.min.js"></script>
 
-  <script src="/js/message-manager.js"></script>
+  <script src="../../js/message-manager.js"></script>
 
 
   <link rel="import" href="/bower_components/polymer/polymer.html">
@@ -31,7 +31,8 @@
 <<%= uiElement %> id="<%= uiId %>"></<%= uiElement %>>
 
   <script>
-    var socket = window.io.connect();
+    var socket = window.io.connect(window.location.protocol + '//' +
+                 window.location.hostname+ ':8080');
     window.cockpit = {
       rov: new window.MessageManager(socket, this)
     }
