WIP Keyboard instructions

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,8 @@
 
     <!-- The following viewport code is intended to fullscreen the cockpit and prevent scrolling -->
     <meta id="Viewport" name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <script type='text/javascript' src="bower_components/jquery/dist/jquery.min.js"></script>
+    <!--<script type='text/javascript' src="bower_components/jquery/dist/jquery.min.js"></script>-->
+    <script type='text/javascript' src="bower_components/jquery/dist/jquery.js"></script>
     <script type='text/javascript' src="bower_components/jquery-ui//jquery-ui.min.js"></script>
 
     <script type="text/javascript">
@@ -35,7 +36,8 @@
   </head>
 
   <script type='text/javascript' src="js/libs/eventemitter2.js"></script>
-  <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
+  <!--<script type='text/javascript' src="js/libs/bootstrap.min.js"></script>-->
+  <script type='text/javascript' src="js/libs/bootstrap.js"></script>
   <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
 
   <script type='text/javascript' src='bower_components/knockoutjs/dist/knockout.js'></script>
