Fixed secondary keys firing primary events

--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -35,7 +35,7 @@
   <script type="text/javascript" src="js/utilities.js"></script>
   <script type="text/javascript" src="js/orov-behavior.js"></script> <!--for orov webcontrols -->
   <script type="text/javascript" src="js/libs/gamepad.js"></script> <!--for gamepad-abstraction -->
-  <script type="text/javascript" src="js/libs/mousetrap.min.js"></script> <!--for gamepad-abstraction -->
+  <script type="text/javascript" src="components/mousetrap/mousetrap.js"></script> <!--for gamepad-abstraction -->
   <script type="text/javascript" src="components/dexie/dist/latest/Dexie.min.js"></script>
   <script type="text/javascript" src="components/comma-separated-values/csv.min.js"></script>
 
