--- a/src/plugins/theme_r2/index.ejs
+++ b/src/plugins/theme_r2/index.ejs
@@ -32,8 +32,9 @@
   <script type="text/javascript" src="js/no-scroll-fullscreen-viewport.js"></script>
   </head>
   <body class='theme_r2'>
+  <p>Some text to translate</p>
   <script type="text/javascript" src="js/utilities.js"></script>
-  <script type="text/javascript" src="js/orov-behavior.js"></script> <!--for orov webcontrols -->
+  <link rel="import" href="js/orov-behavior.html"> <!--for orov webcontrols -->
   <script type="text/javascript" src="js/libs/gamepad.js"></script> <!--for gamepad-abstraction -->
   <script type="text/javascript" src="components/mousetrap/mousetrap.js"></script> <!--for gamepad-abstraction -->
   <script type="text/javascript" src="components/dexie/dist/latest/Dexie.min.js"></script>
