NewUI Pop ups working

--- a/src/plugins/new-ui/index.ejs
+++ b/src/plugins/new-ui/index.ejs
@@ -166,7 +166,7 @@
           <div class="settings-block">
             <h4>Pre-Flight Check</h4>
           </div>
-          <div class="settings-block">
+          <div>
             <orov-thrusters2x1-motortest event-emitter={{cockpit-event-emitter}}></orov-thrusters2x1-motortest>
           </div>
           <div class="settings-block">
